fixing select dropdown color on mobile

--- a/sass/custom/_component_page.scss
+++ b/sass/custom/_component_page.scss
@@ -39,6 +39,7 @@
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
+      color: #222;
       width: 100%;
       margin-bottom: 15px;
       text-align: center;
